# supersonic

./: README.md  cli.py  pyproject.toml  requirements-dev.txt  test
.github/worfklows/: test.yml
.github/workflows/: test.yml
config-examples/: granite.json
granite/: __init__.py
granite/core/: config.py  diff.py  errors.py  github.py  pr.py
granite/tests/: test_config.py  test_github.py  test_pr.py
granite/utils/: diff.py  git.py
supersonic/core/: github.py  pr.py
supersonic/tests/: test_cli.py  test_config.py  test_diff.py  test_git.py  test_github.py  test_pr.py
supersonic/utils/: git.py
