[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "granite"
version = "0.1.0"
description = "Rock-solid GitHub PR automation for modern applications"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "PyGithub>=2.1.1",
    "pydantic>=2.0.0",
    "gitpython>=3.1.40",
    "aiohttp>=3.8.5",
    "click>=8.1.3",
    "jinja2>=3.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.1.9",
    "mypy>=1.5.1",
]

[project.scripts]
granite = "cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["granite"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.mypy]
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_configs = true