[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "supersonic"
version = "0.1.0"
description = "GitHub PR automation for modern applications"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0.0",
    "pygithub>=2.1.1",
    "click>=8.1.3",
    "gitpython>=3.1.40",
    "jinja2>=3.1.2",
    "requests>=2.31.0",
    "types-requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.7.0",
    "mypy>=1.5.1",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.9",
]

[project.scripts]
supersonic = "supersonic.cli:cli"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.mypy]
python_version = "3.8"
strict = false
warn_return_any = true
warn_unused_configs = true

[tool.hatch.build]
include = [
    "supersonic/py.typed",
]
